# Olive

./: .gitignore  README.txt  pyproject.toml
src/: bot.py  sample_config.json
